# VCT_pythonbot

./: .breakpoints  .env  .gitignore  .replit  Bet.py  Match.py  README.md  User.py  colorinterface.py  dbinterface.py  main.py  objembed.py  pyproject.toml  run commands.txt  run-edit commands.txt  run.bat  vlr_interface.py
vctpb/: commands.txt  multidict-6.0.2-cp311-cp311-win_amd64.whl  poetry_command.txt  pyproject.toml  settings-sample.ini
vctpb/migrations/: env.py
vctpb/migrations/versions/: 49008a61dc01_bet_add_hidden.py  d10a938363d7_add_result_channel_id.py  e0ae740e8088_add_a_column.py  e38bf530c0ed_add_alert.py  e91d1c670166_seperate_teams.py
vctpb/tests/: info.txt  test_vctpb.py
vctpb/vctpb/: .gitignore  .replit  Bet.py  Channels.py  Color.py  Match.py  Team.py  Tournament.py  User.py  addcolumn.py  alembic.ini  autocompletes.py  colorinterface.py  convert.py  dbinterface.py  editdb.py  keepalive.py  main.py  modals.py  objembed.py  pyproject.toml  roleinterface.py  savedata.db  savedata.py  savefiles.py  sqlaobjs.py  sqlinterface.py  sqltypes.py  start.py  test.py  utils.py  views.py  vlrinterface.py
vctpb/vctpb/backup/2022-03-02-16-58-59/: match_list_1.txt
vctpb/vctpb/backup/2022-03-03-01-29-51/: bet_channel_id.txt  bet_list_1.txt
vctpb/vctpb/backup/2022-03-04-14-05-36/: match_list_1.txt
vctpb/vctpb/backup/2022-03-05-13-11-46/: colors.txt
vctpb/vctpb/backup/2022-03-06-12-53-00/: bet_list_1.txt  user_list_1.txt
vctpb/vctpb/backup/2022-03-09-02-18-51/: bet_list_1.txt
vctpb/vctpb/backup/2022-03-09-07-12-36/: colors.txt
vctpb/vctpb/backup/2022-03-09-17-34-24/: color.txt  match_channel_id.txt
vctpb/vctpb/backup/2022-03-09-21-59-31/: user_list_1.txt
vctpb/vctpb/files/: creation_channel_id.txt  current_user.txt  match_list_1.txt
