[tool.poetry]
name = "repl_python3_VCT-Predictions-Bot"
version = "0.1.0"
description = ""
authors = ["MaxOrtman <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
jsonpickle = "^2.1.0"
Flask = "^2.0.2"
emoji = "^1.6.3"
py-cord = "2.0.0b1"
typing_extensions = "^3.7.4"
yarl = "^1.7.2"
aiohttp = "^3.8.1"
orjson = "^3.6.7"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
