[tool.poetry]
name = "vctpb"
version = "0.1.0"
description = ""
authors = ["MaxOrtman "]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
jsonpickle = "^2.1.0"
Flask = "^2.0.2"
emoji = "^1.6.3"
typing_extensions = "^3.7.4"
yarl = "^1.7.2"
aiohttp = "^3.8.1"
orjson = "^3.6.7"
numpy = "^1.22.2"
py-cord = {git = "https://github.com/Pycord-Development/pycord"}
matplotlib = "^3.5.1"
pytz = "^2021.3"

[tool.poetry.scripts]
start = "start:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
