[tool.poetry]
name = "VCT-Predictions-Bot"
version = "0.1.0"
description = ""
authors = ["MaxOrtman <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2021.3"
replit = "^3.2.4"
emoji = "^1.7.0"
jsonpickle = "^2.1.0"
py-cord = "2.0.0b5"
PyGithub = "^1.55"
APScheduler = "^3.9.1"
matplotlib = "^3.5.1"
SQLAlchemy = "^1.4.32"
ujson = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
