[tool.poetry]
name = "VCT-Predictions-Bot"
version = "0.1.0"
description = ""
authors = ["MaxOrtman <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2021.3"
emoji = "^1.7.0"
jsonpickle = "^2.1.0"
py-cord = "^2.4.1"
PyGithub = "^1.55"
APScheduler = "^3.9.1"
matplotlib = "^3.5.1"
SQLAlchemy = "^1.4.32"
ujson = "^5.1.0"
alembic = "^1.7.7"
bs4 = "^0.0.1"
pymixbox = "^2.0.0"
lxml = "^4.9.2"
selenium = "^4.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["sqlmypy"]